<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        android:layout_marginTop="20dip">
            <TextView
                android:id="@+id/pwdold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/patient_add_margin_left_25"
                android:textColor="#333333"
                android:textStyle="bold"
                android:text="@string/pwdold"/>

            <EditText
                android:id="@+id/pwdold_input"
                android:ems="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        >
            <TextView
                android:id="@+id/pwdnew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/patient_add_margin_left_25"
                android:textColor="#333333"
                android:textStyle="bold"
                android:text="@string/pwdnew"/>
            <EditText
                android:id="@+id/pwdnew_input"
                android:ems="10"
                android:hint=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_10"
        >
        <TextView
            android:id="@+id/pwdnew2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/patient_add_margin_left_25"
            android:textColor="#333333"
            android:textStyle="bold"
            android:text="@string/pwdnew2"/>
        <EditText
            android:id="@+id/pwdnew2_input"
            android:ems="10"
            android:hint=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <!--submit-->
    <Button
        android:id="@+id/btn_submit"
        android:layout_margin="10dp"
        android:textSize="15sp"
        android:textColor="@color/feedback_submit_text"
        android:background="@drawable/selector_feedback_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/modify_pwd" />
</LinearLayout>
